--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -5,7 +5,7 @@ Unit1:
   start: 0
   end: 3
 Unit2:
-  title: Learn Language
+  title: Team teaches
   description: Learn (JavaScript|Python|Java).  Start Agile development process.
   start: 4
   end: 7
