--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -5,7 +5,12 @@ Unit1:
   start: 0
   end: 3
 Unit2:
-  title: Team teaches
+  title: Learning Language
   description: Learn (JavaScript|Python|Java).  Start Agile development process.
   start: 4
   end: 7
+  Unit3:
+  title: Night at the Museum
+  description: Learn (JavaScript|Python|Java).  Start Agile development process.
+  start: 8
+  end: 12
