--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -14,3 +14,13 @@ Unit3:
   description: Learn (JavaScript|Python|Java).  Start Agile development process.
   start: 8
   end: 12
+Unit4:
+  title: Warm-up Data Abstraction Project, Computer Systems, Networks, Impact of Computing
+  description: Trimester 2 will begin with a Mini-project, CPT warmup. Great projects begin with frontend style. This project will focus on frontend; using SASS, JavaScript, interacting with user events, and representing Binary Algorithm(s). Student Teaching during this period will be preparing for College Board MCQ.
+  start: 13
+  end: 16
+Unit5:
+  title: Create Performance Task (CPT) kickoff, CPT design and development
+  description: Trimester 2 continues with CPT project design and development. The big focus is on frontend/backend for data, databases, and login.
+  start: 17
+  end: 21
